tests/test-types-stability.cc
@@ -50,6 +50,7 @@ const char* elf_paths[] =
   "data/test-types-stability/pr19204-libtcmalloc.so.4.2.6-xlc",
   "data/test-types-stability/PR27165-libzmq.so.5.2.3",
   "data/test-types-stability/pr27980-libc.so",
+  "data/test-types-stability/PR27086-libstdc++.so.6.0.26",
   // The below should always be the last element of array.
   0
 };
